kotlin/programming-kotlin_code/oop/output/notbefore.output
notbefore.kts:4:30: error: variable cannot be initialized before declaration
    if (yearOfMake < 2020) { fuelLevel = 90 } //ERROR
                             ^
